src/objects/Field_History_Tracking_Object__mdt.object
<CustomObject>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ESPSFDCQI-15467</description>
        <inlineHelpText>Select this Checkbox if you want to Enable Tracking for a object</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>ESPSFDCQI-15467</description>
        <inlineHelpText>This field requires the API name of the Salesforce object</inlineHelpText>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking_End_Date__c</fullName>
        <description>ESPSFDCQI-15467</description>
        <inlineHelpText>This field requires the Date from which you want to Stop Tracking</inlineHelpText>
        <label>Tracking End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tracking_Start_Date__c</fullName>
        <description>ESPSFDCQI-15467</description>
        <inlineHelpText>This field requires the Date from which you want to start Tracking</inlineHelpText>
        <label>Tracking Start Date</label>
        <type>DateTime</type>
    </fields>
    <label>Field History Tracking Object</label>
    <pluralLabel>Field History Tracking Objects</pluralLabel>
</CustomObject>